karatevideo spacing correction

--- a/code/projects.css
+++ b/code/projects.css
@@ -322,9 +322,8 @@ body{
     /* size */
     height: 400px;
     /* positioning */
-    margin-top: -55px;
+    margin-top: -50px;
     z-index: 0;
-    
   }
   .h1andbuttovervideo{
     /* content alignment */
